--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,9 @@ layout: compress
             <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
               {{ page.date | date: "%b %d, %Y" }}
             </time>
+            <span itemprop="reading-time">
+              {% include reading_time.html %}
+            </span>
             <span itemprop="author" itemscope itemtype="https://schema.org/Person">
               <span itemprop="name">{{ site.author.name }}</span>
             </span>
